--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,126 @@
   </head>
   <body>
     <div class="page-wrapper">
+      <!-- Header: Mobile Navigation -->
+      <div class="mobile-header">
+        <div class="logo">
+          <a href=""><span class="web">Web</span>Studio</a>
+        </div>
+        <a class="js-open-menu">
+          <svg
+            class="burger-menu"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            viewBox="0 0 32 22"
+            style="enable-background: new 0 0 32 22"
+            xml:space="preserve"
+          >
+            <style type="text/css">
+              .st0 {
+                fill: #2e2f42;
+              }
+            </style>
+            <g>
+              <path
+                class="st0"
+                d="M30.9,21.5H1.3c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h29.5c0.8,0,1.5,0.7,1.5,1.5S31.7,21.5,30.9,21.5z
+                  M30.9,12.2H1.3c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h29.5c0.8,0,1.5,0.7,1.5,1.5S31.7,12.2,30.9,12.2z M30.9,2.9H1.3
+                  c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5h29.5c0.8,0,1.5,0.7,1.5,1.5S31.7,2.9,30.9,2.9z"
+              />
+            </g>
+          </svg>
+        </a>
+      </div>
+      <div class="js-menu-container">
+        <button class="menu-toggle js-close-menu close-btn">
+          <svg>
+            <use href="./icons/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu-contacts">
+          <nav>
+            <ul class="mobile-menu-nav">
+              <li>
+                <h2>
+                  <a href="/index.html">Studio</a>
+                </h2>
+              </li>
+              <li>
+                <h2>
+                  <a href="portfolio.html" class="mobile-active">Portfolio</a>
+                </h2>
+              </li>
+              <li>
+                <h2>
+                  <a>Contacts</a>
+                </h2>
+              </li>
+            </ul>
+          </nav>
+          <ul class="mobile-contacts">
+            <li>
+              <h2>
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+              </h2>
+            </li>
+            <li>
+              <h3>
+                <a href="emailto:info@devstudio.com">info@devstudio.com</a>
+              </h3>
+            </li>
+          </ul>
+        </div>
+        <div class="social-icon-holder">
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            class="social-icon"
+          >
+            <svg width="16" height="16">
+              <use href="./icons/symbol-defs.svg#icon-instagram-2"></use>
+            </svg>
+          </a>
+          <a
+            href="https://www.twitter.com/"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            class="social-icon"
+          >
+            <svg width="16" height="16">
+              <use href="./icons/symbol-defs.svg#icon-twitter-1"></use>
+            </svg>
+          </a>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            class="social-icon"
+          >
+            <svg width="16" height="16">
+              <use href="./icons/symbol-defs.svg#icon-facebook-1"></use>
+            </svg>
+          </a>
+          <a
+            href="https://www.linkedin.com/"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            class="social-icon"
+          >
+            <svg width="16" height="16">
+              <use href="./icons/symbol-defs.svg#icon-linkedin-1"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
       <!-- Header: Navigation bar -->
       <header class="header">
         <div class="container-row">
           <div class="logo">
-            <a href="index.html"><span class="logo-text">Web</span>Studio</a>
+            <a href="index.html"><span class="web">Web</span>Studio</a>
           </div>
           <nav>
             <ul class="navigation">
@@ -40,20 +155,24 @@
           </nav>
           <ul class="contacts">
             <li>
-              <a href="emailto:info@devstudio.com" class="text"
-                >info@devstudio.com</a
-              >
+              <p>
+                <a href="emailto:info@devstudio.com" class="text"
+                  >info@devstudio.com</a
+                >
+              </p>
             </li>
             <li>
-              <a href="tel:+110001111111" class="text">+11 (000) 111-11-11</a>
+              <p>
+                <a href="tel:+110001111111" class="text">+11 (000) 111-11-11</a>
+              </p>
             </li>
           </ul>
         </div>
       </header>
       <main>
         <!-- Filters -->
-        <section class="section">
-          <div class="our-team-cards padding">
+        <section class="section filters-section">
+          <div class="our-team-cards">
             <ul class="buttons">
               <li>
                 <button type="button" class="filter-button filter-button-text">
@@ -93,7 +212,7 @@
                   width="360"
                 />
                 <div class="project-description">
-                  <p class="text">
+                  <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -101,8 +220,8 @@
                 </div>
               </div>
               <div class="body">
-                <h3 class="title-h3">Banking App Interface Concept</h3>
-                <p class="text">App</p>
+                <h3>Banking App Interface Concept</h3>
+                <p>App</p>
               </div>
             </div>
             <div class="card project-card">
@@ -113,7 +232,7 @@
                   width="360"
                 />
                 <div class="project-description">
-                  <p class="text">
+                  <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -121,8 +240,8 @@
                 </div>
               </div>
               <div class="body">
-                <h3 class="title-h3">Cashless Payment</h3>
-                <p class="text">Marketing</p>
+                <h3>Cashless Payment</h3>
+                <p>Marketing</p>
               </div>
             </div>
             <div class="card project-card">
@@ -133,7 +252,7 @@
                   width="360"
                 />
                 <div class="project-description">
-                  <p class="text">
+                  <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -141,8 +260,8 @@
                 </div>
               </div>
               <div class="body">
-                <h3 class="title-h3">Meditation App</h3>
-                <p class="text">App</p>
+                <h3>Meditation App</h3>
+                <p>App</p>
               </div>
             </div>
             <div class="card project-card">
@@ -153,7 +272,7 @@
                   width="360"
                 />
                 <div class="project-description">
-                  <p class="text">
+                  <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -161,8 +280,8 @@
                 </div>
               </div>
               <div class="body">
-                <h3 class="title-h3">Taxi Service</h3>
-                <p class="text">Marketing</p>
+                <h3>Taxi Service</h3>
+                <p>Marketing</p>
               </div>
             </div>
             <div class="card project-card">
@@ -173,7 +292,7 @@
                   width="360"
                 />
                 <div class="project-description">
-                  <p class="text">
+                  <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -181,8 +300,8 @@
                 </div>
               </div>
               <div class="body">
-                <h3 class="title-h3">Screen Illustrations</h3>
-                <p class="text">Design</p>
+                <h3>Screen Illustrations</h3>
+                <p>Design</p>
               </div>
             </div>
             <div class="card project-card">
@@ -193,7 +312,7 @@
                   width="360"
                 />
                 <div class="project-description">
-                  <p class="text">
+                  <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -201,8 +320,8 @@
                 </div>
               </div>
               <div class="body">
-                <h3 class="title-h3">Online Courses</h3>
-                <p class="text">Marketing</p>
+                <h3>Online Courses</h3>
+                <p>Marketing</p>
               </div>
             </div>
             <div class="card project-card">
@@ -213,7 +332,7 @@
                   width="360"
                 />
                 <div class="project-description">
-                  <p class="text">
+                  <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -221,8 +340,8 @@
                 </div>
               </div>
               <div class="body">
-                <h3 class="title-h3">Instagram Stories Concept</h3>
-                <p class="text">Design</p>
+                <h3>Instagram Stories Concept</h3>
+                <p>Design</p>
               </div>
             </div>
             <div class="card project-card">
@@ -233,7 +352,7 @@
                   width="360"
                 />
                 <div class="project-description">
-                  <p class="text">
+                  <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -241,8 +360,8 @@
                 </div>
               </div>
               <div class="body">
-                <h3 class="title-h3">Organic Food</h3>
-                <p class="text">Web Site</p>
+                <h3>Organic Food</h3>
+                <p>Web Site</p>
               </div>
             </div>
             <div class="card project-card">
@@ -253,7 +372,7 @@
                   width="360"
                 />
                 <div class="project-description">
-                  <p class="text">
+                  <p>
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -261,8 +380,8 @@
                 </div>
               </div>
               <div class="body">
-                <h3 class="title-h3">Fresh Coffee</h3>
-                <p class="text">Web Site</p>
+                <h3>Fresh Coffee</h3>
+                <p>Web Site</p>
               </div>
             </div>
           </div>
@@ -271,19 +390,21 @@
       <footer class="footer">
         <div class="footer-container">
           <div class="footer-card">
-            <div class="logo">
-              <a href="/index.html"
-                ><span class="logo-text">Web</span
-                ><span class="dark-bkg">Studio</span></a
-              >
+            <div class="footer-card-title">
+              <div class="logo">
+                <a href="/index.html"
+                  ><span class="web">Web</span
+                  ><span class="dark-bkg">Studio</span></a
+                >
+              </div>
             </div>
-            <p class="text dark-bkg">
+            <p class="dark-bkg">
               Increase the flow of customers and sales for your business with
               digital marketing & growth solutions.
             </p>
           </div>
           <div class="footer-card">
-            <p class="navigation dark-bkg">Social media</p>
+            <p class="footer-card-title navigation dark-bkg">Social media</p>
             <div class="social-icon-holder">
               <a
                 href="https://www.instagram.com/"
@@ -323,9 +444,38 @@
               </a>
             </div>
           </div>
+          <form
+            class="footer-form footer-card"
+            name="signup_form"
+            autocomplete="on"
+            novalidate
+          >
+            <fieldset class="form-group-footer">
+              <p class="footer-card-title navigation dark-bkg">Subscribe</p>
+              <label>
+                <input
+                  type="email"
+                  name="email"
+                  class="input"
+                  placeholder="E-mail"
+                />
+              </label>
+            </fieldset>
+            <div class="footer-button">
+              <button type="submit" class="subscribe-button button-text">
+                <span class="button-text-subscribe">Subscribe</span>
+                <span class="button-icon">
+                  <svg class="subscribe-icon">
+                    <use href="./icons/symbol-defs.svg#icon-icon-send"></use>
+                  </svg>
+                </span>
+              </button>
+            </div>
+          </form>
         </div>
       </footer>
     </div>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
